# zetachain-gateway-solana

./: Anchor.toml  Cargo.toml  README.md  client_config.ini  client_config_dev.ini  package-lock.json  package.json
client/: Cargo.toml
client/src/: main.rs
client/src/instructions/: gateway_send_instructions.rs  lookup_table_instructions.rs  mod.rs  token_instructions.rs
programs/gateway-send/: Cargo.toml
programs/gateway-send/src/: errors.rs  lib.rs  utils.rs
programs/gateway-send/src/instructions/: admin.rs  deposit_and_call.rs  mod.rs  on_call.rs  on_revert.rs
programs/gateway-send/src/states/: config.rs  events.rs
tests/: on-call.test.ts  zetachain-gateway-solana.ts
