[package]
description = "Gateway Send Client"
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
anchor-client = "0.30.1"
anchor-spl = "0.30.1"
anyhow = "1.0.94"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.1"
clap = {version = "4.5.23", features = ["derive"]}
colorful = "0.3.2"
configparser = "3.1.0"
gateway_send = {version = "0.1.0", path = "../programs/gateway-send"}
hex = "0.4.3"
k256 = "=0.10.1"
rand = "0.7.3"
sha3 = "0.10.8"
spl-noop = "0.2.0"
spl-token-client = "0.10.1"
