[package]
description = "Gateway Send Client"
edition = "2021"
name = "client"
version = "0.1.0"

[dependencies]
anchor-client = "0.31.1"
anchor-spl = "0.31.1"
anyhow = "1.0.94"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.5.1"
clap = {version = "4.5.23", features = ["derive"]}
configparser = "3.1.0"
gateway_send = {version = "0.1.0", path = "../programs/gateway-send"}
hex = "0.4.3"
rand = "0.9.1"
spl-token-client = "0.14.0"

solana-program.workspace = true
zeroize.workspace = true
