[package]
description = "Created with Anchor"
edition = "2021"
name = "gateway_send"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "gateway_send"

[features]
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
